--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 
 <body>
-    <iframe src="http://test-website-pysix.s3-website-us-east-1.amazonaws.com/" />
+    <iframe src="https://d5qsk19ydo6qy.cloudfront.net/" />
 </body>
 </html>
