--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta charSet="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>YOY</title>
+    <style>
+        html,
+        body,
+        iframe {
+            height: 100%;
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
